[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "grid-lang"
version = "0.1.0"
authors = [
    { name="Your Name", email="your.email@example.com" },
]
description = "A grid-based programming language interpreter"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[project.scripts]
grid = "grid_lang.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["grid_lang"] 